--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
----
-layout: default
----
-<ul>
-	{% for post in site.posts %}
-	<li><a href="{{  post.url }}" title="{{ post.title }}"><img src="/assets/img/file.ico" title="{{ post.title }}" />{{ post.title }}</a></li>
-	{% endfor %}
-</ul>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Uneven Prankster</title>
+        <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
+        <link rel= "stylesheet" type= "text/css" href= "main.css">
+    </head>
+
+    <body>
+        <header>
+            <span>
+                <img src="res/deluxe.png" alt="Uneven Prankster">
+                <p>"Solo indiedev who does the things."</p>
+            </span>
+        </header>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home!</a> 
+                    <a>//</a> 
+                    <a href="about.html">About</a> 
+                    <a>//</a> 
+                    <a href="https://discordapp.com/invite/re2YfaW">Discord Server</a>
+                    <a>//</a> 
+                    <a href="https://twitter.com/StarPrankster">Twitter</a>
+                    <a>//</a> 
+                    <a href="https://www.patreon.com/unevenprankster">Patreon</a>
+                    <a>//</a> 
+                    <a href="https://ko-fi.com/uneven">Ko-Fi</a>
+                    <a>//</a> 
+                    <a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ">Youtube</a>
+                    <a>//</a> 
+                    <a href="https://unevenprankster.itch.io">itch.io</a>
+                </li>
+            </ul>
+        </nav>
+
+        <main>
+            <h1>/*/*/ What's new?</h1>
+            <section>
+                <h2>A warm hello. :) <span>01/02/2019</span></h2>
+                <p>
+                    This is the first update post of the brand new Uneven Prankster website. It's a pleasure to see a more simple look into the website, and I certainly hope
+                    you'll love it. This format will let me have more control over every post, blog, and even a page for games and their development! I hope you have a very
+                    nice start of December! :D 
+                </p>
+            </section>
+        </main>
+
+        <footer>2019, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
+    </body>
+</html>
