--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <title>Uneven Prankster</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
-        <link rel= "stylesheet" type= "text/css" href= "main.css">
+        <link rel= "stylesheet" type= "text/css" href= "/main.css">
     </head>
 
     <body>
