--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
         <title>Uneven Prankster</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
         <link rel= "stylesheet" type= "text/css" href= "/main.css">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Uneven Prankster">
+        <meta property="og:description" content="Uneven Prankster's main website for all things. ALL OF THEM.">
+        <meta property="og:image" content="res/deluxe.png">
     </head>
 
     <body>
