--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Uneven Prankster</title>
+        <title>Uneven Prankster | About</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
         <link rel= "stylesheet" type= "text/css" href= "/main.css">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Uneven Prankster">
+        <meta property="og:description" content="Uneven Prankster's main website about page for info on him.">
+        <meta property="og:image" content="res/deluxe.png">
     </head>
 
     <body>
