--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Uneven Prankster</title>
+        <title>Uneven Prankster | About</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
         <link rel= "stylesheet" type= "text/css" href= "/main.css">
         <meta property="og:type" content="website">
