--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <link rel= "stylesheet" type= "text/css" href= "/main.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Uneven Prankster">
-        <meta property="og:description" content="Uneven Prankster's main website for all things. ALL OF THEM.">
+        <meta property="og:description" content="Uneven Prankster's main website about page for info on him.">
         <meta property="og:image" content="/res/deluxe.png">
     </head>
 
