--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Uneven Prankster">
         <meta property="og:description" content="Uneven Prankster's main website about page for info on him.">
-        <meta property="og:image" content="https://githubprankster.github.io/res/deluxe.png">
+        <meta property="og:image" content="http://githubprankster.github.io/res/deluxe.png">
     </head>
 
     <body>
