--- a/light.html
+++ b/light.html
@@ -3,7 +3,7 @@
     <head>
         <title>Uneven Prankster</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
-        <link rel= "stylesheet" type= "text/css" href= "/main.css">
+        <link rel= "stylesheet" type= "text/css" href= "/lover.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Moon and Star?">
         <meta property="og:description" content="Show me how brave you are.">
