--- a/light.html
+++ b/light.html
@@ -41,7 +41,8 @@
         </nav>
 
         <main>
-            <h1>/*/*/ Show how brave you truly are.</h1>
+            <h1>/*/*/ Fire and War.</h1>
+            <img src="res/HIGHEST_ORDER.jpg" alt="Highest Order">
         </main>
 
         <footer>2019, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
