--- a/light.html
+++ b/light.html
@@ -42,7 +42,7 @@
 
         <main>
             <h1>/*/*/ Fire and War.</h1>
-            <img src="res/HIGHEST_ORDER.jpg" alt="Highest Order">
+            <img src="res/HIGHEST_ORDER.jpg" alt="The Highest">
         </main>
 
         <footer>2019, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
