--- a/light.html
+++ b/light.html
@@ -21,30 +21,30 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home!</a> 
+                    <a href="index.html">Home.</a> 
                     <a>//</a> 
-                    <a href="about.html">About</a> 
+                    <a href="about.html">About..</a> 
                     <a>//</a> 
-                    <a href="https://discordapp.com/invite/re2YfaW">Discord Server</a>
+                    <a href="https://discordapp.com/invite/re2YfaW">Discord</a>
                     <a>//</a> 
-                    <a href="https://twitter.com/StarPrankster">Twitter</a>
+                    <a href="https://twitter.com/StarPrankster">Twit</a>
                     <a>//</a> 
-                    <a href="https://www.patreon.com/unevenprankster">Patreon</a>
+                    <a href="https://www.patreon.com/unevenprankster">Patron</a>
                     <a>//</a> 
-                    <a href="https://ko-fi.com/uneven">Ko-Fi</a>
+                    <a href="https://ko-fi.com/uneven">Kofi</a>
                     <a>//</a> 
-                    <a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ">Youtube</a>
+                    <a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ">You</a>
                     <a>//</a> 
-                    <a href="https://unevenprankster.itch.io">itch.io</a>
+                    <a href="https://unevenprankster.itch.io">itch</a>
                 </li>
             </ul>
         </nav>
 
         <main>
             <h1>/*/*/ Fire and War.</h1>
-            <img src="res/HIGHEST_ORDER.jpg" title="Ranking above all." alt="The Highest">
+            <img src="res/CLOCKWORK.png" title="The Shine of The Beast." alt="Valley">
         </main>
 
-        <footer>2019, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
+        <footer>2019, Uneven Prankster, there may be rights reserved...?</footer>
     </body>
 </html>
