Make it real cool

--- a/light.html
+++ b/light.html
@@ -41,7 +41,7 @@
         </nav>
 
         <main>
-            <h1>/*/*/ Fire and War.</h1>
+            <h1>/*/*/ Machine for fools.</h1>
             <img src="res/CLOCKWORK.png" title="The Shine of The Beast." alt="Valley">
         </main>
 
