Update with info and stuff!!!

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
         <main>
             <h1>/*/*/ What's new?</h1>
             <section>
-                <h2>A warm hello. :) <span>01/02/2019</span></h2>
+                <h2>New Years! <span>03/01/2020</span></h2>
+                <p>
+                    It has been some days ever since I have stepped into the new decade. Currently working on Bravelight, which you can find development on more in my
+                    Discord Server, link above. I am using C++ for this since it is more compatible and possibly faster. It has been fun to comeback to OpenGL with more
+                    smarts! Soon i'll also add Lua to make things load without needing to "make" everytime.
+                </p>
+            </section>
+            <section>
+                <h2>A warm hello. :) <span>01/12/2019</span></h2>
                 <p>
                     This is the first update post of the brand new Uneven Prankster website. It's a pleasure to see a more simple look into the website, and I certainly hope
                     you'll love it. This format will let me have more control over every post, blog, and even a page for games and their development! I hope you have a very
@@ -52,6 +60,6 @@
             </section>
         </main>
 
-        <footer>2019, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
+        <footer>2020, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
     </body>
 </html>
