--- a/light.html
+++ b/light.html
@@ -5,8 +5,8 @@
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
         <link rel= "stylesheet" type= "text/css" href= "/lover.css">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Moon and Star?">
-        <meta property="og:description" content="Show me how brave you are.">
+        <meta property="og:title" content="Bravelight">
+        <meta property="og:description" content="Show me how brave you truly are. A game about a threat from the unknown.">
         <meta property="og:image" content="http://githubprankster.github.io/res/moon_and_star.png">
     </head>
 
@@ -45,6 +45,6 @@
             <img src="res/CLOCKWORK.png" title="The Shine of The Beast." alt="Valley">
         </main>
 
-        <footer>2019, Uneven Prankster, there may be rights reserved...?</footer>
+        <footer>2020, Uneven Prankster, there may be rights reserved...?</footer>
     </body>
 </html>
