--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <section>
                 <h2>Behold now, infomation about me!</h2>
                 <p>
-                    I am a solo indie gamedev most known for making very weird and cool games, and also programming with C, Lua and Assembly.
+                    I am a solo indie gamedev most known for making very weird and cool games, and also programming with C, C++, Lua and Assembly.
                 </p>
 
                 <p>
@@ -66,7 +66,7 @@
 
                 <p> 
                     Heard all that? Great, why don't you see too my stuff on Youtube? (link also above!) I make videos from time to time. 
-                    (as of 01/12/2019, has not entirely completed a playthrough of Deltarune on camera, somehow.)
+                    (as of 03/01/2020, has not entirely completed a playthrough of Deltarune on camera, somehow.)
                 </p>
 
                 <p>
@@ -76,6 +76,6 @@
             </section>
         </main>
 
-        <footer>2019, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
+        <footer>2020, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
     </body>
 </html>
