--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
                 <p> 
                     Heard all that? Great, why don't you see too my stuff on Youtube? (link also above!) I make videos from time to time. 
-                    (as of 03/01/2020, has not entirely completed a playthrough of Deltarune on camera, somehow.)
+                    (as of 12/02/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
                 </p>
 
                 <p>
