Updated with new stuff

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <title>Uneven Prankster | About</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
-        <link rel= "stylesheet" type= "text/css" href= "/main.css">
+        <link rel= "stylesheet" type= "text/css" href= "main.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Uneven Prankster">
         <meta property="og:description" content="Uneven Prankster's main website about page for info on him.">
@@ -45,7 +45,7 @@
             <section>
                 <h2>Behold now, infomation about me!</h2>
                 <p>
-                    I am a solo indie gamedev most known for making very weird and cool games, and also programming with C, C++, Lua and Assembly.
+                    I am a solo indie gamedev most known for making very weird and cool games, and also programming with C, Lua and Assembly.
                 </p>
 
                 <p>
@@ -55,7 +55,7 @@
                 </p>
 
                 <p>
-                    I make my games with <i>Aseprite, Blender, VS Code, Audacity, OBS, Inkscape</i>! It's Free and Open Source software in this house.
+                    I make my games with <i>Aseprite, Blender, Audacity, OBS, Inkscape</i>! It's Free and Open Source software in this house.
                     Also, I have an interest for music (16bit 44,1kHz ftw) and have always loved game soundtracks due to that.
                 </p>
 
@@ -66,7 +66,7 @@
 
                 <p> 
                     Heard all that? Great, why don't you see too my stuff on Youtube? (link also above!) I make videos from time to time. 
-                    (as of 12/02/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
+                    (as of 30/03/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
                 </p>
 
                 <p>
