--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <title>Uneven Prankster</title>
         <link rel = "icon" type = "image/x-icon" href="res/favicon.ico">
-        <link rel= "stylesheet" type= "text/css" href= "/main.css">
+        <link rel= "stylesheet" type= "text/css" href= "main.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Uneven Prankster">
-        <meta property="og:description" content="Uneven Prankster's main website for- #(@_#* rivers">
+        <meta property="og:description" content="Uneven Prankster's main website.">
         <meta property="og:image" content="http://githubprankster.github.io/res/deluxe.png">
     </head>
 
@@ -14,7 +14,7 @@
         <header>
             <span>
                 <img src="res/deluxe.png" alt="Uneven Prankster">
-                <p>"Solo indiedev who does the things."</p>
+                <p>"Solo indiedev who does the weird stuff."</p>
             </span>
         </header>
 
@@ -44,20 +44,10 @@
             <h1>/*/*/ What's new?</h1>
             
             <section>
-                <h2>New Years! <span>03/01/2020</span></h2>
+                <h2>Upcoming stuff! <span>30/03/2020</span></h2>
                 <p>
-                    It has been some days ever since I have stepped into the new decade. Currently working on Bravelight, which you can find development on more in my
-                    Discord Server, link above. I am using C++ for this since it is more compatible and possibly faster. It has been fun to comeback to OpenGL with more
-                    smarts! Soon i'll also add Lua to make things load without needing to "make" everytime.
-                </p>
-            </section>
-            
-            <section>
-                <h2>A warm hello. :) <span>01/12/2019</span></h2>
-                <p>
-                    This is the first update post of the brand new Uneven Prankster website. It's a pleasure to see a more simple look into the website, and I certainly hope
-                    you'll love it. This format will let me have more control over every post, blog, and even a page for games and their development! I hope you have a very
-                    nice start of December! :D 
+                    Wow, I suck at updating! Currently I am finishing up the game Lone World for Linux and Windows and starting work
+		    on an awesome project done from scratch. What is it about? You'll see!
                 </p>
             </section>
         </main>
