--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <header>
             <span>
                 <img src="res/deluxe.png" alt="Uneven Prankster">
-                <p>"Solo indiedev who does the things."</p>
+                <p>"Solo indiedev who does games. AND things."</p>
             </span>
         </header>
 
@@ -43,7 +43,7 @@
         <main>
             <h1>/*/ About Uneven: </h1>
             <section>
-                <h2>Behold now, infomation about me!</h2>
+                <h2>Behold! Infomation about me!</h2>
                 <p>
                     I am a solo indie gamedev most known for making very weird and cool games, and also programming with C, Lua and Assembly.
                 </p>
@@ -66,7 +66,7 @@
 
                 <p> 
                     Heard all that? Great, why don't you see too my stuff on Youtube? (link also above!) I make videos from time to time. 
-                    (as of 01/04/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
+                    (as of 02/04/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
                 </p>
 
                 <p>
@@ -76,6 +76,6 @@
             </section>
         </main>
 
-        <footer>2020, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
+        <footer>2020, Uneven Prankster, there may be rights reserved. Or not! Who knows?!?</footer>
     </body>
 </html>
