--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
         <main>
             <h1>/*/*/ What's new?</h1>
+
+	    <section>
+                <h2>Operating Systems, and Language Hell <span>02/04/2020</span></h2>
+                <p>
+                    <a href="blog/oses-and-hell.html">A blog post on OSdev, and why I like using C.</a>
+                </p>
+            </section>
             
             <section>
                 <h2>Upcoming stuff! <span>30/03/2020</span></h2>
