The Future is Raytraced - First Build
Wow! RTX ON!!!111

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 </p>
 
                 <p>
-                    I make my games with <i>Aseprite, Blender, Audacity, OBS, Inkscape</i>! It's Free and Open Source software in this house.
+                    I make my games with <i>Aseprite, Blender, Audacity, OBS, Inkscape, Godot</i>! It's Free and Open Source software in this house.
                     Also, I have an interest for music (16bit 44,1kHz ftw) and have always loved game soundtracks due to that.
                 </p>
 
@@ -66,7 +66,7 @@
 
                 <p> 
                     Heard all that? Great, why don't you see too my stuff on Youtube? (link also above!) I make videos from time to time. 
-                    (as of 02/04/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
+                    (as of 23/04/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
                 </p>
 
                 <p>
