--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
         <main>
             <h1>/*/*/ What's new?</h1>
 
-	    <section>
+            <section>
+                <h2>The Future Is Raytraced <span>23/04/2020</span></h2>
+                <p>
+                    <a href="blog/raytracing.html">A blog post on the power of raytracing.</a>
+                </p>
+            </section>
+
+	        <section>
                 <h2>Operating Systems, and Language Hell <span>02/04/2020</span></h2>
                 <p>
                     <a href="blog/oses-and-hell.html">A blog post on OSdev, and why I like using C.</a>
