"Aftermath of Indiepocalypse" and cosmetic changes
Turbular!

--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Uneven Prankster">
         <meta property="og:description" content="Uneven Prankster's main website about page for info on him.">
-        <meta property="og:image" content="http://githubprankster.github.io/res/deluxe.png">
+        <meta property="og:image" content="http://githubprankster.github.io/res/broadgen.png">
     </head>
 
     <body>
         <header>
             <span>
-                <img src="res/deluxe.png" alt="Uneven Prankster">
-                <p>"Solo indiedev who does games. AND things."</p>
+                <img src="res/broadgen.png" alt="Uneven Prankster">
+                <p>"Indiedev from Brazil who relentlessly is weird."</p>
             </span>
         </header>
 
@@ -45,17 +45,17 @@
             <section>
                 <h2>Behold! Infomation about me!</h2>
                 <p>
-                    I am a solo indie gamedev most known for making very weird and cool games, and also programming with C, Lua and Assembly.
+                    I am a indiedev most known for making very weird and cool games, and also programming with C, Lua and Assembly.
                 </p>
 
                 <p>
                     At only 16 years old, I have created many games you can find on itch.io (link above!), usually unfinished, but sometimes or
                     other I come up with many interesting things. Go to my Discord or Twitter to find out the daily life of a dude who keeps on
-                    making these things, and also eats chocolate bars in less than a hour.
+                    making these things, and also eats chocolate bars in less than a hour. (or half of one)
                 </p>
 
                 <p>
-                    I make my games with <i>Aseprite, Blender, Audacity, OBS, Inkscape, Godot</i>! It's Free and Open Source software in this house.
+                    I make my games with <i>Aseprite, Blender, Audacity, OBS, Inkscape</i>! It's Free and Open Source software in this house.
                     Also, I have an interest for music (16bit 44,1kHz ftw) and have always loved game soundtracks due to that.
                 </p>
 
@@ -66,7 +66,7 @@
 
                 <p> 
                     Heard all that? Great, why don't you see too my stuff on Youtube? (link also above!) I make videos from time to time. 
-                    (as of 23/04/2020, has not <i>exactly</i> entirely completed a playthrough of Deltarune on camera, somehow.)
+                    (as of 04/27/2020, has <i>truly</i> entirely completed a playthrough of Deltarune on camera.)
                 </p>
 
                 <p>
