--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Uneven Prankster">
         <meta property="og:description" content="Uneven Prankster's main website.">
-        <meta property="og:image" content="http://githubprankster.github.io/res/deluxe.png">
+        <meta property="og:image" content="http://githubprankster.github.io/res/broadgen.png">
     </head>
 
     <body>
         <header>
             <span>
-                <img src="res/deluxe.png" alt="Uneven Prankster">
-                <p>"Solo indiedev who does the weird stuff."</p>
+                <img src="res/broadgen.png" alt="Uneven Prankster">
+                <p>"Indiedev from Brazil who keeps doing the weird stuff."</p>
             </span>
         </header>
 
@@ -41,7 +41,14 @@
         </nav>
 
         <main>
-            <h1>/*/*/ What's new?</h1>
+            <h1>/*/*/ What's new?</h1><h5>probably nothing!</h5>
+
+	    <section>
+		<h2>Aftermath of Indiepocalypse <span>28/06/2020</span></h2>
+		<p>
+			<a href="blog/indiepocalypse.html">A blog post in my opinions on the state of Indie gaming.</a>
+		</p>
+	    </section>
 
             <section>
                 <h2>The Future Is Raytraced <span>23/04/2020</span></h2>
