--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
         <main>
             <h1>/*/*/ What's new?</h1><h5>probably nothing!</h5>
+		<section>
+			<h2>3D Rendering goes Uneven <span>04/09/2020</span></h2>
+			<p>
+				<a href="blog/2dgl.html">A blog post on the opposite of 3D rendering.</a>
+			</p>
+	    	</section>
+		
 
 	    <section>
 		<h2>Aftermath of Indiepocalypse <span>28/06/2020</span></h2>
