Coroutines in Lua

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <main>
             <h1>/*/*/ What's new?</h1><h5>probably nothing!</h5>
 		<section>
+			<h2>Coroutines in Lua <span>19/09/2020</span></h2>
+			<p>
+				<a href="blog/luaco.html">A blog post on utilizing Lua's coroutines.</a>
+			</p>
+	    	</section>
+		<section>
 			<h2>3D Rendering goes Uneven <span>04/09/2020</span></h2>
 			<p>
 				<a href="blog/2dgl.html">A blog post on the opposite of 3D rendering.</a>
