--- a/about.html
+++ b/about.html
@@ -43,20 +43,21 @@
         <main>
             <h1>/*/ About Uneven: </h1>
             <section>
-                <h2>Behold! Infomation about me!</h2>
+                <h2>It's-The-Infomation!</h2>
                 <p>
-                    I am a indiedev most known for making very weird and cool games, and also programming with C, Lua and Assembly.
+                    I am a indiedev most known for making very weird and cool games, and also programming them almost solely using
+                    C and Lua + the many formats I experiment with.
                 </p>
 
                 <p>
-                    At only 16 years old, I have created many games you can find on itch.io (link above!), usually unfinished, but sometimes or
-                    other I come up with many interesting things. Go to my Discord or Twitter to find out the daily life of a dude who keeps on
+                    At only 17 years old, I have created many games you can find on itch.io (link above!), mostly unfinished, but sometimes or
+                    other I come up with few finished works. Go to my Discord or Twitter to find out the daily life of a dude who keeps on
                     making these things, and also eats chocolate bars in less than a hour. (or half of one)
                 </p>
 
                 <p>
                     I make my games with <i>Aseprite, Blender, Audacity, OBS, Inkscape</i>! It's Free and Open Source software in this house.
-                    Also, I have an interest for music (16bit 44,1kHz ftw) and have always loved game soundtracks due to that.
+                    Also, I have some interest for music (16bit 44,1kHz ftw) and have always loved game soundtracks due to that.
                 </p>
 
                 <p>
@@ -70,12 +71,12 @@
                 </p>
 
                 <p>
-                    You are free to chat with me, as long as you are a nice person. Meanies suck. Don't be them. (Please also have actually 
+                    You are free to chat with me, as long as you're cool. Meanies suck. Don't be them. (Please also have actually 
                     something to say...)
                 </p>
             </section>
         </main>
 
-        <footer>2020, Uneven Prankster, there may be rights reserved. Or not! Who knows?!?</footer>
+        <footer>2020, Uneven Prankster, there may be rights reserved. Or not! Do you know?</footer>
     </body>
 </html>
