3 Years of Indiedev
:)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
         </nav>
 
         <main>
-            <h1>/*/*/ What's new?</h1><h5>probably nothing!</h5>
+            <h1>/*/*/ What's new?</h1><h5>smthing?</h5>
+		<section>
+			<h2>3 Years of Indiedev <span>12/10/2020</span></h2>
+			<p>
+				<a href="blog/3years.html">A blog post on looking back at achievements, many, many failures, and ahead.</a>
+			</p>
+	    	</section>
 		<section>
 			<h2>Coroutines in Lua <span>19/09/2020</span></h2>
 			<p>
