--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     <a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ">Youtube</a>
                     <a>//</a> 
                     <a href="https://unevenprankster.itch.io">itch.io</a>
+		    <a>//</a> 
+		    <a href="rss.xml"><img src="res/pic_rss.png"></a>
                 </li>
             </ul>
         </nav>
