--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
                     <a href="https://discordapp.com/invite/re2YfaW">Discord Server</a>
                     <a>//</a> 
                     <a href="https://twitter.com/StarPrankster">Twitter</a>
-                    <a>//</a> 
+                    <a>//</a>
+			<a href="https://unevenprankster.newgrounds.com">Newgrounds</a>
+			<a>//</a>
                     <a href="https://www.patreon.com/unevenprankster">Patreon</a>
                     <a>//</a> 
                     <a href="https://ko-fi.com/uneven">Ko-Fi</a>
