New website! Screw that wack.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta property="og:title" content="Uneven Prankster">
         <meta property="og:description" content="Uneven Prankster's main website.">
         <meta property="og:image" content="http://githubprankster.github.io/res/broadgen.png">
+	<meta http-equiv="refresh" content="0; url=https://unevenprankster.neocities.org/index.html">
     </head>
 
     <body>
