--- a/index.html
+++ b/index.html
@@ -15,88 +15,8 @@
         <header>
             <span>
                 <img src="res/broadgen.png" alt="Uneven Prankster">
-                <p>"Indiedev from Brazil who keeps doing the weird stuff."</p>
+                <p>Redirecting you somewhere better...</p>
             </span>
         </header>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home!</a> 
-                    <a>//</a> 
-                    <a href="about.html">About</a> 
-                    <a>//</a> 
-                    <a href="https://discordapp.com/invite/re2YfaW">Discord Server</a>
-                    <a>//</a> 
-                    <a href="https://twitter.com/StarPrankster">Twitter</a>
-                    <a>//</a>
-			<a href="https://unevenprankster.newgrounds.com">Newgrounds</a>
-			<a>//</a>
-                    <a href="https://www.patreon.com/unevenprankster">Patreon</a>
-                    <a>//</a> 
-                    <a href="https://ko-fi.com/uneven">Ko-Fi</a>
-                    <a>//</a> 
-                    <a href="https://www.youtube.com/channel/UCns7LWoeawHKZIyMQnq65kQ">Youtube</a>
-                    <a>//</a> 
-                    <a href="https://unevenprankster.itch.io">itch.io</a>
-		    <a>//</a> 
-		    <a href="rss.xml"><img src="res/pic_rss.png"></a>
-                </li>
-            </ul>
-        </nav>
-
-        <main>
-            <h1>/*/*/ What's new?</h1><h5>smthing?</h5>
-		<section>
-			<h2>3 Years of Indiedev <span>12/10/2020</span></h2>
-			<p>
-				<a href="blog/3years.html">A blog post on looking back at achievements, many, many failures, and ahead.</a>
-			</p>
-	    	</section>
-		<section>
-			<h2>Coroutines in Lua <span>19/09/2020</span></h2>
-			<p>
-				<a href="blog/luaco.html">A blog post on utilizing Lua's coroutines.</a>
-			</p>
-	    	</section>
-		<section>
-			<h2>3D Rendering goes Uneven <span>04/09/2020</span></h2>
-			<p>
-				<a href="blog/2dgl.html">A blog post on the opposite of 3D rendering.</a>
-			</p>
-	    	</section>
-		
-
-	    <section>
-		<h2>Aftermath of Indiepocalypse <span>28/06/2020</span></h2>
-		<p>
-			<a href="blog/indiepocalypse.html">A blog post in my opinions on the state of Indie gaming.</a>
-		</p>
-	    </section>
-
-            <section>
-                <h2>The Future Is Raytraced <span>23/04/2020</span></h2>
-                <p>
-                    <a href="blog/raytracing.html">A blog post on the power of raytracing.</a>
-                </p>
-            </section>
-
-	        <section>
-                <h2>Operating Systems, and Language Hell <span>02/04/2020</span></h2>
-                <p>
-                    <a href="blog/oses-and-hell.html">A blog post on OSdev, and why I like using C.</a>
-                </p>
-            </section>
-            
-            <section>
-                <h2>Upcoming stuff! <span>30/03/2020</span></h2>
-                <p>
-                    Wow, I suck at updating! Currently I am finishing up the game Lone World for Linux and Windows and starting work
-		    on an awesome project done from scratch. What is it about? You'll see!
-                </p>
-            </section>
-        </main>
-
-        <footer>2020, Uneven Prankster, there may be rights reserved. Or not. Who knows?!</footer>
     </body>
 </html>
